# b5g-sds-mmwave-attenuation-surrogate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: main.py
notebooks/: 01_eda_aerosol.ipynb  02_eda_met.ipynb  03_merge_aer_met.ipynb  04_dataset_construction.ipynb  05_model_training.ipynb  06_validation.ipynb
src/b5g_sds_atten_surrogate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pipeline/: labelgen.py
src/sds_atten_surrogate/: __init__.py  config.py  features.py  io.py  model.py  surrogate.py  utils.py
